--- a/client/src/App.css
+++ b/client/src/App.css
@@ -1,11 +1,25 @@
 .App {
+  width: 1200px;
+  margin-left: auto;
+  margin-right: auto;
 }
 
 .App-header {
-  background-color: #222;
+  background-color: #4e95e0;
   height: 150px;
-  padding: 20px;
+  padding: 10px;
   color: white;
+}
+
+.App-header .logo {
+  height:130px;
+  background-image: url("http://res.cloudinary.com/hallam/image/upload/v1522606777/vault.png");
+  background-repeat: no-repeat;
+  background-size: contain;
+}
+
+.App-header .title {
+  font-size: 24px;
 }
 
 .App-title {
@@ -15,6 +29,7 @@
 .App .entry {
   color: black;
   text-align: left;
+  font-weight: bold;
 }
 
 .App .top {
@@ -22,11 +37,34 @@
   justify-content: space-evenly;
 }
 
-.App .display {
+.display {
   display: flex;
-  flex-direction: column;
+  justify-content: center;
 }
 
-.App .entry{
+.recipeCard {
+  width: 600px;
+}
+
+.entry:hover{
+  cursor: pointer;
+  color: grey;
+}
+
+.recipeCard .removeRecipe {
+  width: 150px;
+  font-weight: bold;
+  margin-top: 10px;
+  margin-left: auto;
+  margin-right: auto;
+}
+
+.recipeCard .removeRecipe:hover {
+  color: grey;
+  cursor: pointer;
+}
+
+.removeIngredient:hover {
+  color: grey;
   cursor: pointer;
 }
